# UV_NEWS_DASHBOARD

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/app/: README.md  get_custom_data.py  linux_main.py  main.py  newsapi_fetcher.py  scheduler.py  store_in_db.py  test.py  test2.py  test3.py
src/app/data_extraction/: line_graph_data.py  pie_chart_data.py  top_news.py  top_sources.py
src/app/db_logic/: db.py  db_test.py  models.py
src/app/models/: ag_news_classifier.pkl  news_classifier.py  sentiment.py
src/app/redis_logic/: async_redis.py  redis.py
src/app/scheduled/: delete_old_news.py  store_in_redis.py
